--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 *.DS_Store
 *.Rhistory
-data/yelp_academic_*
-data/test/yelp_academic_*
-data/train/yelp_academic_*
+data/*
+data/test/*
+data/train/*
